--- a/css/style.css
+++ b/css/style.css
@@ -45,10 +45,9 @@ h4 {
 /*--------- nav----------- */
 #logotipo {
     /*dimensiones*/
-    min-width: 350px;
+    min-width: 300px;
     /*posicion*/
     margin: 0;
-    padding: 7px;
     /*estilo*/
     background-color: rgb(0, 128, 53);
     text-align: center;
@@ -66,26 +65,32 @@ h4 {
     width: 90%;
     height: 100%;
     /*posicion*/
-    position: absolute;
-    top: 100px;
+
+     top: 100px;
     padding: 0;
  
-    margin-left:510px ;
+    margin-left:510px ; 
     /*estilo*/
-
+ 
     position: absolute;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%); 
    
 }
 
+ .menu_show {
+    visibility: visible;
+    opacity: 1;
+    -webkit-transform: scale(1);
+    
+  }
 #menu ul li a {
     max-height: 103px;
     /*estilo*/
     color: black;
     font-size: 20px;
     /*posicion*/
-    padding: 37px;
+    padding: 35px;
      /*transicion*/
     transition: all .3s;
 }
@@ -99,21 +104,19 @@ h4 {
   border: none;
   border-radius: 0;
   width: 70px;
-  height: 60px;
+  height: 70px;
   outline: 0;
 }
 
 .navbar button i {
     color: black;
-    font-size: 40px;
+    font-size: 50px;
     
   }
   
 .navbar-collapse{
     background-color: rgb(138, 0, 18);
     color: black;
-    position: relative;
-    
 }
 
 /* #menu-background{
@@ -128,13 +131,15 @@ h4 {
     color: white;
     background-color: green;
     border: none;
-    font-size: 17px;
+    font-size: 20px;
      /*posicion*/
     margin-right: 20px;
-    padding: 10px;
+    padding: 5px;
     float: right;
     /*cursor*/
     cursor: pointer;
+    width: 80px;
+    height: 40px;
 }
 
 /*--------- slider----------- */
@@ -233,7 +238,23 @@ h4 {
 }
 
 .sidebars {
-    padding: 20px 0px;
+    padding-bottom: 20px;
 }
 
 
+@media (max-width: 1000px) {
+ 
+    .navbar-collapse{
+        position: absolute;
+        width: 100%;
+        top: 434px;
+        left: 50%;
+        transform: translate(-50%); 
+    }
+    #logotipo {
+        height: 70px;
+        font-size: 25px;
+        line-height: 30px;
+
+    }
+  }
